# tankzone

./: .cursorrules  .gitignore  Cargo.toml  MILESTONE_2_CHECKLIST.md  MILESTONE_2_DOCUMENTATION.md  MILESTONE_3_CHECKLIST.md  Makefile  README.md  debug-client.js  debug_mouse.html  dev.sh  package-lock.json  package.json  quick-test.js  run_game.sh  server.js  start-dev.sh  tank_battle_3d.html  test-headless-initial-state.js  test-simple-connection.js  visual-test.js
.cargo/: config.toml
assets/: Untitled.blend  Untitled.blend1  Untitled.glb  tank_body.glb  turret.glb
battlexone_shared/src/: lib.rs
client/: SOLUTION_SUMMARY.md  check-connected-text.js  debug-3d-scene.js  debug-comprehensive-test.js  debug-connection-flow.js  debug-decode-test.js  debug-input.js  final-e2e-test.js  full-connection-test.js  headless-connection-test.js  hud-debug-test.js  input-server-test.js  jest.config.js  jest.e2e.config.js  package-lock.json  package.json  quick-test.js  simple-connection-test.js  simple-visual-test.js  success-summary.js  test-2d-fallback.js  test-client.js  test-connection-status.js  test-connection.js  test-input-simulation.js  webpack.config.js
client/src/: index.html
client/src/js/: fallback2d.js  hud.js  input.js  main.js  network.js  scene.js  tank.js
client/src/proto/: messages.d.ts  messages.js
client/tests/: setup.js
client/tests/e2e/: globalSetup.js  globalTeardown.js  input-server-loop.test.js  setup.js  simple-connection.test.js
project_planning/: MILESTONE_1_CHECKLIST.md  MILESTONE_2_CHECKLIST.md  TESTING_SUMMARY.md  milestones.md  overview.md
proto/: messages.proto
schemas/: README.md  client-messages.json  game-objects.json  server-messages.json
scripts/: generate-js-proto.sh  setup-test-deps.sh
server/: Cargo.toml
server/src/: ecs.rs  game_state.rs  lib.rs  main.rs  network.rs  physics.rs  server.rs  state_sync.rs
server/tests/: integration_protobuf.rs  integration_tests.rs  simple_health_test.rs
shared/: Cargo.toml  build.rs
shared/src/: config.rs  events.rs  lib.rs  proto.rs  types.rs
src/: client.rs  config.rs  game_state.rs  input.rs  lib.rs  main.rs  network.rs  rendering.rs  server.rs  systems.rs  tank_model.rs  test_client.rs  validation.rs
src/game/: bullet.rs  collision.rs  enemy.rs  mod.rs  physics.rs  player.rs  state.rs
src/network/: messages.rs  mod.rs  websocket.rs
static/: index.html
tests/: common.rs  comprehensive_tests.rs  debug_hang_test.rs  end_to_end_test.rs  integration_test.rs  integration_tests.rs  mouse_control_test.rs  schema_validation_tests.rs  simple_connectivity_test.rs  simple_server_test.rs  websocket_motion_e2e_test.rs  working_e2e_test.rs
