[package]
name = "battlexone"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
rand = "0.8"

# Bevy dependencies for native client
bevy = { version = "0.14", features = ["default"] }

[dev-dependencies]
tokio-test = "0.4"

# Server binary
[[bin]]
name = "server"
path = "src/main.rs"

# Native Bevy client binary
[[bin]]
name = "client"
path = "src/client.rs"

[lib]
name = "battlexone_shared"
path = "src/lib.rs"

# Cargo aliases for convenience
[alias]
game = "run --bin client"
serve = "run --bin server" 