[package]
name = "battletanks-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
rapier3d = { workspace = true }
nalgebra = { workspace = true }
hecs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
prost = "0.12"

# Local dependencies
battletanks-shared = { path = "../shared" }

[dev-dependencies]
criterion = { workspace = true }
tokio-test = "0.4"
tracing-test = "0.2"
prost = "0.12"


 