[package]
name = "battletanks-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
rapier3d = { workspace = true }
nalgebra = { workspace = true }
hecs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
dashmap = { workspace = true }

# Local dependencies
battletanks-shared = { path = "../shared" }

[dev-dependencies]
criterion = { workspace = true }
tokio-test = "0.4"
tracing-test = "0.2"
reqwest = { version = "0.11", features = ["json"] }


 