[package]
name = "battletanks-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
nalgebra = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
config = "0.14"

# Protocol Buffers
prost = "0.12"
prost-types = "0.12"

[build-dependencies]
prost-build = "0.12" 