[package]
name = "battletanks-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
nalgebra = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
prost-build = "0.12" 